solved overflow-x error

--- a/tasha-portfolio/src/App.css
+++ b/tasha-portfolio/src/App.css
@@ -5,6 +5,11 @@
   text-align: center;
 }
 
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
